Fix scrollbar

--- a/style/table.css
+++ b/style/table.css
@@ -5,5 +5,6 @@
     margin: 0 auto;
 }
 .main-tables-container, .plans-container--slider {
+    overflow-x: auto;
     justify-content: center;
 }
